# DicomVisionServer

./: .dockerignore  .env.example  .env.web.production  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_LOGIC.zh-CN.md  README.en.md  README.md  README.zh-CN.md  desktop_entry.py  fly.toml  pyproject.toml  readMe.md  render.yaml  run.py
app/: __init__.py  main.py
docs/: 4d-respiratory-phase-playback.zh-CN.md  backend-flow.zh-CN.md  measurement-requirements.zh-CN.md  mpr-crosshair-flow.zh-CN.md  mpr-crosshair-rotation-reimplementation.zh-CN.md  mpr-reslice-cursor-design.zh-CN.md  webrtc-3d.md
sample-data/: README.md  nested-tags-demo.dcm
scripts/: benchmark_3d_transport.py  benchmark_vtk_render.py  build-desktop-bundle.ps1  build_desktop_bundle.py  generate_openapi_types.py
tests/: __init__.py  test_annotations.py  test_dicom_async_job_states.py  test_dicom_cache.py  test_dicom_calculation_truth.py  test_dicom_compatibility.py  test_dicom_deidentify_integrity.py  test_dicom_geometry_physical.py  test_dicom_job_utils.py  test_dicom_tags_api.py  test_dicom_zip_import.py  test_four_d_playback_hub.py  test_four_d_series.py  test_gpu_render_process.py  test_gsps_import.py  test_hover_mapping.py  test_load_sample_api.py  test_measurement_dicom_physical.py  test_measurement_geometry.py  test_measurement_rules.py  test_measurement_utils.py  test_medical_analysis_api.py  test_medical_qa_truth.py  test_mpr_dicom_physical_e2e.py  test_mpr_oblique.py  test_mpr_reslice_cursor_core.py  test_mpr_segmentation.py  test_pacs_dicomweb.py  test_pacs_dimse.py  test_pacs_local_roundtrip.py  (+27 more)
(+447 files in other folders)
