[project]
name = "dicomvision-server"
version = "1.2.0"
description = "FastAPI backend for reading DICOM files and serving rendered images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-socketio>=5.11.0,<6.0.0",
    "pydicom>=3.0.0,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "Pillow>=10.4.0,<12.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "scipy>=1.17.1",
    "vtk>=9.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
